--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 database_host=localhost
 database=crm
 user=root
+#user=crm
 password=12345
-authorization=Unoweb-Authorization
+#password=m07OeUimxkr5tfntX8UW
+authorization=unoweb_authorization
 JWT_SECRET=12345
